# rtm-rust-sandbox

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  docker-image.sh  start-db.sh  start-dev-db.sh
migrations/2018-06-15-211224_create_tasks/: up.sql
src/: api.rs  lib.rs  main.rs  routes.rs
src/core/: mod.rs  models.rs  schema.rs  service.rs
src/routes/: html.rs  mod.rs  rest.rs
templates/: index.html.hbs
tests/: e2e_tests.rs  integration_test.rs
