[package]
name = "rtm"
version = "0.1.0"
authors = ["Alexey Novakov <novakov.alex at gmail com>"]

[dependencies]
chrono = {version = "0.4.2", features = ["serde"]}
diesel = { version = "1.3.2", features = ["postgres", "chrono"] }
diesel_migrations = "1.3.0"
diesel_codegen = { version = "0.16.1", features = ["postgres"] }

# Needed for Postgres.
openssl = "*"
dotenv = "0.9.0"
r2d2 = "*"
r2d2-diesel = "*"

rocket = "0.3.14"
rocket_codegen = "0.3.14"
rocket_contrib = {version = "0.3.14", features = ["handlebars_templates"]}

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"